# docs/swagger.json
@@ -12,6 +12,138 @@
     },
     "basePath": "/api/v1",
     "paths": {
+        "/educations": {
+            "get": {
+                "description": "ดึงข้อมูลการศึกษาทั้งหมด",
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "Education"
+                ],
+                "summary": "ดึงรายการการศึกษา",
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "type": "array",
+                            "items": {
+                                "$ref": "#/definitions/models.Study"
+                            }
+                        }
+                    },
+                    "500": {
+                        "description": "Internal Server Error",
+                        "schema": {
+                            "type": "object",
+                            "additionalProperties": true
+                        }
+                    }
+                }
+            }
+        },
+        "/educations/{id}": {
+            "get": {
+                "description": "ดึงข้อมูลการศึกษาตาม ID",
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "Education"
+                ],
+                "summary": "ดูข้อมูลการศึกษาตาม ID",
+                "parameters": [
+                    {
+                        "type": "string",
+                        "description": "ID ของการศึกษา",
+                        "name": "id",
+                        "in": "path",
+                        "required": true
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/models.Study"
+                        }
+                    },
+                    "404": {
+                        "description": "Not Found",
+                        "schema": {
+                            "type": "object",
+                            "additionalProperties": true
+                        }
+                    }
+                }
+            }
+        },
+        "/experiences": {
+            "get": {
+                "description": "ดึงข้อมูลประสบการณ์ทั้งหมด พร้อมโปรเจกต์ที่เกี่ยวข้อง",
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "Experience"
+                ],
+                "summary": "ดึงรายการประสบการณ์ทำงาน",
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "type": "array",
+                            "items": {
+                                "$ref": "#/definitions/models.Experience"
+                            }
+                        }
+                    },
+                    "500": {
+                        "description": "Internal Server Error",
+                        "schema": {
+                            "type": "object",
+                            "additionalProperties": true
+                        }
+                    }
+                }
+            }
+        },
+        "/experiences/{id}": {
+            "get": {
+                "description": "ดึงข้อมูลประสบการณ์ตาม ID",
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "Experience"
+                ],
+                "summary": "ดูประสบการณ์ทำงานตาม ID",
+                "parameters": [
+                    {
+                        "type": "string",
+                        "description": "ID ของประสบการณ์",
+                        "name": "id",
+                        "in": "path",
+                        "required": true
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/models.Experience"
+                        }
+                    },
+                    "404": {
+                        "description": "Not Found",
+                        "schema": {
+                            "type": "object",
+                            "additionalProperties": true
+                        }
+                    }
+                }
+            }
+        },
         "/login": {
             "post": {
                 "description": "ตรวจสอบ Username/Password และคืนค่า JWT Token",
@@ -87,7 +219,8 @@
                     "201": {
                         "description": "Created",
                         "schema": {
-                            "$ref": "#/definitions/models.Study"
+                            "type": "object",
+                            "additionalProperties": true
                         }
                     },
                     "400": {
@@ -101,6 +234,65 @@
             }
         },
         "/member/education/{id}": {
+            "put": {
+                "security": [
+                    {
+                        "BearerAuth": []
+                    }
+                ],
+                "description": "อัพเดตข้อมูลการศึกษาตาม ID (ต้อง Login)",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "Education"
+                ],
+                "summary": "แก้ไขข้อมูลการศึกษา",
+                "parameters": [
+                    {
+                        "type": "string",
+                        "description": "ID ของการศึกษา",
+                        "name": "id",
+                        "in": "path",
+                        "required": true
+                    },
+                    {
+                        "description": "ข้อมูลการศึกษาที่ต้องการแก้ไข",
+                        "name": "input",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "type": "object"
+                        }
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "type": "object",
+                            "additionalProperties": true
+                        }
+                    },
+                    "400": {
+                        "description": "Bad Request",
+                        "schema": {
+                            "type": "object",
+                            "additionalProperties": true
+                        }
+                    },
+                    "404": {
+                        "description": "Not Found",
+                        "schema": {
+                            "type": "object",
+                            "additionalProperties": true
+                        }
+                    }
+                }
+            },
             "delete": {
                 "security": [
                     {
@@ -164,7 +356,7 @@
                         "in": "body",
                         "required": true,
                         "schema": {
-                            "$ref": "#/definitions/models.Experience"
+                            "type": "object"
                         }
                     }
                 ],
@@ -172,7 +364,8 @@
                     "201": {
                         "description": "Created",
                         "schema": {
-                            "$ref": "#/definitions/models.Experience"
+                            "type": "object",
+                            "additionalProperties": true
                         }
                     },
                     "400": {
@@ -186,6 +379,65 @@
             }
         },
         "/member/experience/{id}": {
+            "put": {
+                "security": [
+                    {
+                        "BearerAuth": []
+                    }
+                ],
+                "description": "อัพเดตข้อมูลประสบการณ์ทำงาน (ต้อง Login)",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "Experience"
+                ],
+                "summary": "แก้ไขข้อมูลประสบการณ์ทำงาน",
+                "parameters": [
+                    {
+                        "type": "string",
+                        "description": "ID ของประสบการณ์ทำงาน",
+                        "name": "id",
+                        "in": "path",
+                        "required": true
+                    },
+                    {
+                        "description": "ข้อมูลประสบการณ์ทำงานที่ต้องการแก้ไข",
+                        "name": "input",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "type": "object"
+                        }
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "type": "object",
+                            "additionalProperties": true
+                        }
+                    },
+                    "400": {
+                        "description": "Bad Request",
+                        "schema": {
+                            "type": "object",
+                            "additionalProperties": true
+                        }
+                    },
+                    "404": {
+                        "description": "Not Found",
+                        "schema": {
+                            "type": "object",
+                            "additionalProperties": true
+                        }
+                    }
+                }
+            },
             "delete": {
                 "security": [
                     {
@@ -224,106 +476,7 @@
                 }
             }
         },
-        "/member/projects": {
-            "post": {
-                "security": [
-                    {
-                        "BearerAuth": []
-                    }
-                ],
-                "description": "บันทึกข้อมูลโปรเจกต์ใหม่ (ต้อง Login)",
-                "consumes": [
-                    "application/json"
-                ],
-                "produces": [
-                    "application/json"
-                ],
-                "tags": [
-                    "Projects"
-                ],
-                "summary": "เพิ่มข้อมูลโปรเจกต์",
-                "parameters": [
-                    {
-                        "description": "ข้อมูลโปรเจกต์",
-                        "name": "input",
-                        "in": "body",
-                        "required": true,
-                        "schema": {
-                            "type": "object"
-                        }
-                    }
-                ],
-                "responses": {
-                    "201": {
-                        "description": "Created",
-                        "schema": {
-                            "type": "object",
-                            "additionalProperties": true
-                        }
-                    },
-                    "400": {
-                        "description": "Bad Request",
-                        "schema": {
-                            "type": "object",
-                            "additionalProperties": true
-                        }
-                    }
-                }
-            }
-        },
         "/member/projects/{id}": {
-            "put": {
-                "security": [
-                    {
-                        "BearerAuth": []
-                    }
-                ],
-                "description": "แก้ไขข้อมูลโปรเจกต์ตาม ID (ต้อง Login)",
-                "consumes": [
-                    "application/json"
-                ],
-                "produces": [
-                    "application/json"
-                ],
-                "tags": [
-                    "Projects"
-                ],
-                "summary": "อัปเดตข้อมูลโปรเจกต์",
-                "parameters": [
-                    {
-                        "type": "string",
-                        "description": "ID ของโปรเจกต์",
-                        "name": "id",
-                        "in": "path",
-                        "required": true
-                    },
-                    {
-                        "description": "ข้อมูลโปรเจกต์ที่ต้องการแก้ไข",
-                        "name": "input",
-                        "in": "body",
-                        "required": true,
-                        "schema": {
-                            "type": "object"
-                        }
-                    }
-                ],
-                "responses": {
-                    "200": {
-                        "description": "OK",
-                        "schema": {
-                            "type": "object",
-                            "additionalProperties": true
-                        }
-                    },
-                    "404": {
-                        "description": "Not Found",
-                        "schema": {
-                            "type": "object",
-                            "additionalProperties": true
-                        }
-                    }
-                }
-            },
             "delete": {
                 "security": [
                     {
@@ -361,29 +514,6 @@
                     }
                 }
             }
-        },
-        "/projects": {
-            "get": {
-                "description": "แสดงรายชื่อโปรเจกต์พร้อมรูปภาพประกอบสำหรับหน้าเว็บทั่วไป",
-                "produces": [
-                    "application/json"
-                ],
-                "tags": [
-                    "Projects"
-                ],
-                "summary": "ดึงข้อมูลโปรเจกต์ทั้งหมด",
-                "responses": {
-                    "200": {
-                        "description": "OK",
-                        "schema": {
-                            "type": "array",
-                            "items": {
-                                "$ref": "#/definitions/models.Project"
-                            }
-                        }
-                    }
-                }
-            }
         }
     },
     "definitions": {
@@ -406,6 +536,12 @@
                 "jobTitle": {
                     "type": "string"
                 },
+                "projects": {
+                    "type": "array",
+                    "items": {
+                        "$ref": "#/definitions/models.Project"
+                    }
+                },
                 "startDate": {
                     "type": "string"
                 },
@@ -426,6 +562,9 @@
                 "description": {
                     "type": "string"
                 },
+                "experienceID": {
+                    "type": "string"
+                },
                 "githubURL": {
                     "type": "string"
                 },
@@ -433,7 +572,6 @@
                     "type": "string"
                 },
                 "images": {
-                    "description": "Relationships",
                     "type": "array",
                     "items": {
                         "$ref": "#/definitions/models.ProjectImage"
@@ -476,6 +614,12 @@
                 "degree": {
                     "type": "string"
                 },
+                "faculty": {
+                    "type": "string"
+                },
+                "gpa": {
+                    "type": "number"
+                },
                 "graduationDate": {
                     "type": "string"
                 },
@@ -497,7 +641,6 @@
             "type": "object",
             "properties": {
                 "category": {
-                    "description": "Backend, Frontend, AI, etc.",
                     "type": "string"
                 },
                 "iconURL": {
