# routes/routes.go
@@ -1,21 +1,22 @@
 package routes
 
 import (
+	"os"
+	"strings"
+
 	"github.com/Piyadanai03/portfolio-api/controllers/auth"
 	"github.com/Piyadanai03/portfolio-api/controllers/education"
 	"github.com/Piyadanai03/portfolio-api/controllers/experience"
-	"github.com/Piyadanai03/portfolio-api/controllers/projects"
-	"github.com/Piyadanai03/portfolio-api/controllers/profile"
 	"github.com/Piyadanai03/portfolio-api/controllers/portfolio"
+	"github.com/Piyadanai03/portfolio-api/controllers/profile"
+	"github.com/Piyadanai03/portfolio-api/controllers/projects"
 	"github.com/Piyadanai03/portfolio-api/controllers/technologies"
 	_ "github.com/Piyadanai03/portfolio-api/docs"
 	"github.com/Piyadanai03/portfolio-api/middleware"
 	"github.com/gin-contrib/cors"
 	"github.com/gin-gonic/gin"
-	"github.com/swaggo/files"
-	"github.com/swaggo/gin-swagger"
-	"os"
-	"strings"
+	swaggerFiles "github.com/swaggo/files"
+	ginSwagger "github.com/swaggo/gin-swagger"
 )
 
 func SetupRouter() *gin.Engine {
@@ -41,8 +42,13 @@ func SetupRouter() *gin.Engine {
 
 	v1.GET("/projects", projects.GetProjects)
 	v1.GET("/projects/:id", projects.GetProjectByID)
+	v1.GET("/educations", education.GetEducations)
+	v1.GET("/educations/:id", education.GetEducationByID)
+	v1.GET("/experiences", experience.GetExperiences)
+	v1.GET("/experiences/:id", experience.GetExperienceByID)
 	v1.GET("/home", portfolio.GetHomeData)
 	v1.POST("/login", auth.Login)
+	v1.GET("/tech", technologies.GetTechnologies)
 
 	admin := v1.Group("/admin")
 	admin.Use(middleware.AuthMiddleware())
@@ -50,25 +56,25 @@ func SetupRouter() *gin.Engine {
 
 	}
 
-member := v1.Group("/member")
-member.Use(middleware.AuthMiddleware())
-{
-	member.POST("/projects", projects.CreateProject)
-	member.PUT("/projects/:id", projects.UpdateProject)
-	member.DELETE("/projects/:id", projects.DeleteProject)
+	member := v1.Group("/member")
+	member.Use(middleware.AuthMiddleware())
+	{
+		member.POST("/projects", projects.CreateProject)
+		member.PUT("/projects/:id", projects.UpdateProject)
+		member.DELETE("/projects/:id", projects.DeleteProject)
+		member.POST("/education", education.CreateEducation)
+		member.PUT("/education/:id", education.UpdateEducation)
+		member.DELETE("/education/:id", education.DeleteEducation)
 
-	member.POST("/education", education.CreateEducation)
-	member.DELETE("/education/:id", education.DeleteEducation)
+		member.POST("/experience", experience.CreateExperience)
+		member.PUT("/experience/:id", experience.UpdateExperience)
+		member.DELETE("/experience/:id", experience.DeleteExperience)
 
-	member.POST("/experience", experience.CreateExperience)
-	member.DELETE("/experience/:id", experience.DeleteExperience)
+		member.POST("/tech", technologies.CreateTech)
 
-	member.POST("/tech", technologies.CreateTech)
-	member.GET("/tech", technologies.GetTechnologies)
-
-	member.GET("/profile", profile.GetProfile)
-	member.PUT("/profile", profile.UpdateProfile)
-}
+		member.GET("/profile", profile.GetProfile)
+		member.PUT("/profile", profile.UpdateProfile)
+	}
 
 	return r
 }
